# FastAPI_template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py
app/api/: main.py
app/api/routes/: ExampleRoute.py
app/infrastructure/: exception_handler.py  init_db.py
app/infrastructure/alembic/: env.py
app/infrastructure/alembic/versions/: cbad5199a3d0_initial_migration.py
app/infrastructure/core/: __init__.py  config.py  depends.py
app/infrastructure/db/: __init__.py  session.py
app/infrastructure/interfaces/repositories/: IExampleRepository.py
app/infrastructure/interfaces/services/: IExampleService.py
app/infrastructure/repositories/: ExampleRepository.py
app/infrastructure/schemas/: Entity.py
app/infrastructure/schemas/dtoModels/: ExampleDTO.py
app/models/: __init__.py
app/models/dbModels/: EntityDB.py
app/models/dbModels/ExampleModel/: ExampleModel.py  example.py
app/services/: ExampleService.py  __init__.py
tests/: conftest.py
tests/api/: test_example_route.py
tests/repositories/: test_example_repository.py
tests/services/: test_example_service.py
