[tool.poetry]
name = "lms-streaming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.0"
pydantic = {extras = ["email"], version = "^2.11.0"}
pydantic-settings = "^2.9.0"
environs = "^14.2.0"
loguru = "^0.7.3"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.10"
qrcode = {extras = ["pil"], version = "^8.2"}
reportlab = "^4.4.0"
aiohttp = "^3.12.0"
ruff = "^0.11.0"
isort = "^6.0.0"
black = "^25.1.0"
dependency-injector = "^4.37.0"
pytest = "^8.4.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
aiosqlite = "^0.19.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"